megamart/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: megamart-ingress
  namespace: megamart

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:

          # Frontend
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend

                port:
                  number: 80

          # Backend API
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: api-gateway

                port:
                  number: 3020
